--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ repositories {
 dependencies {
 	implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.3'
+	testImplementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-api', version: '2.3.0'
 	implementation group: 'jakarta.transaction', name: 'jakarta.transaction-api', version: '2.0.1'
 }
 
