--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,8 @@ spring:
   sql:
     init:
       mode: always
+  springdoc:
+    swagger-ui:
+      path: /swagger-ui.html
+  api-docs:
+    path: api-docs
