--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	testImplementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-api', version: '2.3.0'
 	testImplementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webflux-api', version: '2.8.4'
 	implementation group: 'jakarta.transaction', name: 'jakarta.transaction-api', version: '2.0.1'
+	implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server:3.4.4")
 }
 
 dependencies {
